content/versioned/2.2/performance/graalvm/tasks-ci.mdx
---
title: Tasks & CI
description: The Gradle tasks the Nucleus plugin adds for GraalVM native image, where their output lands, and how to run them on each OS in CI.
---

import { Callout } from 'fumadocs-ui/components/callout';

The Nucleus Gradle plugin registers a task graph for building and packaging your app
as a GraalVM native image. From 2.2 the public task surface mirrors the JVM distribution
pipeline (`run` / `createDistributable` / `runDistributable` /
`packageDistributionForCurrentOS`), plus per-format packaging tasks (`packageGraalvmDeb`,
`packageGraalvmDmg`, `packageGraalvmNsis`). Most tasks are wired as dependencies of the
internal `packageGraalvmNative` assembler and run automatically. This page lists the tasks,
shows where their output lands, and covers running them on each target OS in CI.

## Gradle tasks

### Public surface (aligned with the JVM pipeline)

| Task | JVM counterpart | Description |
|------|-----------------|-------------|
| `runGraalvmNative` | `run` | Fast dev loop: forces native-image quick-build (`-Ob`), then runs the binary. Overrides the configured `optimization`. |
| `createGraalvmNativeDistributable` | `createDistributable` | Build the self-contained native app folder for the current OS (no installer). |
| `runGraalvmNativeDistributable` | `runDistributable` | Build with the configured optimization (full packaging) and run the app folder. |
| `packageGraalvmNativeDistributionForCurrentOS` | `packageDistributionForCurrentOS` | Package the native distribution for the current OS. |

`runGraalvmNative` and the distributable tasks record a `quickBuild` compile input, so
switching between them re-compiles rather than serving a stale binary from the other mode.

### Metadata, installers, and helpers

| Task | Description |
|------|-------------|
| `packageGraalvmNative` | Internal assembler: compile the image and layout the app folder (binary + Skiko/AWT libs + icons). Prefer the public tasks above. |
| `runWithNativeAgent` | Run the app with the GraalVM `native-image-agent` to collect reflection metadata. |
| `resolveGraalvmReachabilityMetadata` | Resolve reachability metadata from the Oracle repository for runtime dependencies. Runs automatically. |
| `analyzeGraalvmStaticMetadata` | Statically analyze bytecode to detect reflection, JNI, and resource usage. Runs automatically. |
| `filterGraalvmLibraryMetadata` | Filter and merge per-library metadata against the runtime classpath. Runs automatically. |
| `generateGraalvmPlatformMetadata` | Generate platform-specific metadata for the current OS. Runs automatically. |
| `cleanupGraalvmMetadata` | Remove entries from your manual `reachability-metadata.json` that automatic metadata already covers. |
| `packageGraalvmDeb` | Package the native image as a `.deb` installer (Linux). |
| `packageGraalvmDmg` | Package the native image as a `.dmg` installer (macOS). |
| `packageGraalvmNsis` | Package the native image as an NSIS `.exe` installer (Windows). |

The four metadata tasks run as dependencies of `packageGraalvmNative`, so you rarely
invoke them directly. The `packageGraalvm<Format>` tasks use electron-builder, which
requires Node.js on the runner.

<Callout type="info">
The packaging tasks exist only for target formats you request in `nativeDistributions.targetFormats`.
A task name is the format's enum constant, so `TargetFormat.Deb` produces `packageGraalvmDeb`,
`TargetFormat.Nsis` produces `packageGraalvmNsis`, and so on.
</Callout>

## Run the tasks

```shell
# Fast local iteration (quick-build -Ob)
./gradlew runGraalvmNative

# Full-optimization app folder, then run it
./gradlew runGraalvmNativeDistributable

# Build the self-contained native app folder only
./gradlew createGraalvmNativeDistributable

# Package for the current OS
./gradlew packageGraalvmNativeDistributionForCurrentOS

# Platform installers
./gradlew packageGraalvmDeb     # Linux
./gradlew packageGraalvmDmg     # macOS
./gradlew packageGraalvmNsis    # Windows

# Collect reflection metadata before a release
./gradlew runWithNativeAgent

# Remove redundant manual metadata
./gradlew cleanupGraalvmMetadata
```

The plugin defaults the native-image target architecture (`graalvm.march`) per platform
(`COMPATIBILITY` everywhere, `NATIVE` on Apple-Silicon macOS). To force a portable binary
everywhere, set the type-safe enum:

```kotlin title="build.gradle.kts"
nucleus.application {
    graalvm {
        march = NativeImageMarch.COMPATIBILITY
    }
}
```

<Callout type="info">
The Nucleus sample builds map `graalvm.march` to a Gradle property so you can override it
on the command line. With that wiring,
`./gradlew packageGraalvmNative -PnativeMarch=compatibility` selects the portable target.
The `-PnativeMarch` flag only works if your build script reads the property.
</Callout>

## Output locations

The native app folder lands next to the JVM distributable layout (from 2.2):

```
<project>/build/compose/binaries/<app>/graalvm-app/
```

| Platform | Output |
|----------|--------|
| **macOS** | `graalvm-app/<packageName>/<app>.app/` — full `.app` bundle with `Info.plist`, icons, and signed dylibs |
| **Windows** | `graalvm-app/<packageName>/<app>.exe` plus companion DLLs |
| **Linux** | `graalvm-app/<packageName>/<app>` plus companion `.so` files |

Per-format installers land under the binaries directory, one folder per format:

```
<project>/build/compose/binaries/<app>/graalvm-<format>/
```

`<format>` is the format id, for example `graalvm-deb`, `graalvm-dmg`, or `graalvm-nsis`.

## Build in CI with GitHub Actions

A native image must be compiled on each target OS — you cannot cross-compile. Run a
matrix over `ubuntu-latest`, `macos-latest`, and `windows-latest`, and provision the
toolchain with the `setup-nucleus` action:

```yaml
name: GraalVM release

on:
  push:
    tags: ["v*"]

jobs:
  build-natives:
    uses: ./.github/workflows/build-natives.yaml

  graalvm:
    needs: build-natives
    name: GraalVM - ${{ matrix.name }}
    runs-on: ${{ matrix.os }}
    timeout-minutes: 60
    strategy:
      fail-fast: false
      matrix:
        include:
          - { name: Linux x64,    os: ubuntu-latest }
          - { name: macOS ARM64,  os: macos-latest  }
          - { name: Windows x64,  os: windows-latest }

    steps:
      - uses: actions/checkout@v4

      # Download pre-built JNI native libs from the build-natives job here.

      - name: Set up Nucleus (GraalVM)
        uses: NucleusFramework/Nucleus/.github/actions/setup-nucleus@main
        with:
          graalvm: 'true'
          setup-gradle: 'true'
          setup-node: 'true'   # required for packageGraalvm<Format>

      - name: Build the GraalVM native package
        shell: bash
        run: |
          case "$RUNNER_OS" in
            Linux)   ./gradlew :myapp:packageGraalvmDeb  -PnativeMarch=compatibility --no-daemon ;;
            macOS)   ./gradlew :myapp:packageGraalvmDmg  -PnativeMarch=compatibility --no-daemon ;;
            Windows) ./gradlew :myapp:packageGraalvmNsis -PnativeMarch=compatibility --no-daemon ;;
          esac

      - uses: actions/upload-artifact@v4
        with:
          name: graalvm-${{ runner.os }}
          path: myapp/build/compose/binaries/**/graalvm-*/**
```

Native builds download and cache GraalVM Community Edition automatically, so you no longer need
to provision a GraalVM toolchain in CI — `setup-nucleus` installing the JBR is enough. Set
`graalvm: 'true'` only to pin your own toolchain (it provisions BellSoft Liberica NIK and
exports `GRAALVM_HOME`, which takes precedence over the auto-download when it matches the
configured distribution). `setup-gradle: 'true'`
configures Gradle, and `setup-node: 'true'` installs Node.js for the electron-builder packaging
tasks. See [CI/CD](/docs/packaging/ci-cd) for the full release workflow, including publishing to
GitHub Releases.

### Cache the Gradle build

`setup-gradle: 'true'` runs `gradle/actions/setup-gradle`, which caches Gradle's
dependency and build outputs. That already covers the Oracle reachability metadata
repository — it is resolved as a normal dependency — and the outputs of the metadata
tasks. GraalVM native-image compilation is the long step (roughly 5–15 minutes per
platform) and runs from scratch on each build; it is not incrementally cached.

## Debug missing reflection at runtime

Run the native binary from a terminal. Reflection failures produce clear messages such
as `ClassNotFoundException` or `NoSuchFieldException`. To capture the missing entries:

1. Run `./gradlew runWithNativeAgent` and exercise the failing code path so the agent
   records the entry.
2. The agent merges its output into your metadata without overwriting manually enriched
   entries, so only genuinely new entries are added.
3. Rebuild with `./gradlew packageGraalvmNative`.

<Callout type="warn">
`packageGraalvmDeb` fails unless `homepage` is set in `nativeDistributions` — electron-builder
requires it for DEB packaging. See [Configuration](/docs/start/configuration).
</Callout>

## What's next

- [GraalVM configuration](/docs/performance/graalvm/configuration) — the `graalvm { }` DSL and its properties.
- [Automatic metadata](/docs/performance/graalvm/automatic-metadata) — how reflection metadata is resolved for you.
- [CI/CD](/docs/packaging/ci-cd) — the full release workflow with signing and publishing.
- [Configuration](/docs/start/configuration) — `nativeDistributions` and the `homepage` property.
